fleet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-crud-clientes
  namespace: app-teste
  labels:
    app: crud-clientes
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: app-homolog.ddns.net
      http:
        paths:
          - backend:
              service:
                name: svc-crud-clientes
                port:
                  number: 9000
            path: /
            pathType: Prefix
