fleet/networkPolicy.yaml
# create a network policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: crud-clientes-networkpolicy
  namespace: app-teste
spec:
  podSelector:
    matchLabels:
      app: crud-clientes
  policyTypes:
    - Ingress
#    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: crud-clientes
#  egress:
#   - {}
